# AbyssinianCat

./: .env  CMakeLists.txt  Makefile  README.md
cmake/: AbyssinianCatConfig.cmake.in
include/AbyssinianCat/: Cat.hpp  Paw.hpp  Tail.hpp
src/Paw/: CMakeLists.txt  Paw.cpp
src/Pow/: CMakeLists.txt  Pow.cpp
src/Tail/: CMakeLists.txt  Tail.cpp
test/: CMakeLists.txt  test_paw.cpp  test_tail.cpp
